package grpc

import (
	"context"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	thothnetworkv1 "github.com/ZanzyTHEbar/thothnetwork/pkg/gen/proto/thothnetwork/v1"
)

// PipelineService implements the PipelineService gRPC service
type PipelineService struct {
	thothnetworkv1.UnimplementedPipelineServiceServer
	adapter *Adapter
}

// NewPipelineService creates a new PipelineService instance
func NewPipelineService(adapter *Adapter) *PipelineService {
	return &PipelineService{
		adapter: adapter,
	}
}

// CreatePipeline creates a new pipeline
func (s *PipelineService) CreatePipeline(ctx context.Context, req *thothnetworkv1.CreatePipelineRequest) (*thothnetworkv1.CreatePipelineResponse, error) {
	s.adapter.logger.Debug("CreatePipeline request received", "name", req.Name)

	// TODO: Implement actual pipeline creation logic
	// This would typically involve:
	// 1. Validating the request
	// 2. Calling a domain service to create the pipeline
	// 3. Converting the result to the response type

	return nil, status.Error(codes.Unimplemented, "method CreatePipeline not implemented")
}

// GetPipeline retrieves a pipeline by ID
func (s *PipelineService) GetPipeline(ctx context.Context, req *thothnetworkv1.GetPipelineRequest) (*thothnetworkv1.GetPipelineResponse, error) {
	s.adapter.logger.Debug("GetPipeline request received", "id", req.Id)

	// TODO: Implement actual pipeline retrieval logic

	return nil, status.Error(codes.Unimplemented, "method GetPipeline not implemented")
}

// UpdatePipeline updates an existing pipeline
func (s *PipelineService) UpdatePipeline(ctx context.Context, req *thothnetworkv1.UpdatePipelineRequest) (*thothnetworkv1.UpdatePipelineResponse, error) {
	s.adapter.logger.Debug("UpdatePipeline request received", "id", req.Id)

	// TODO: Implement actual pipeline update logic

	return nil, status.Error(codes.Unimplemented, "method UpdatePipeline not implemented")
}

// DeletePipeline deletes a pipeline
func (s *PipelineService) DeletePipeline(ctx context.Context, req *thothnetworkv1.DeletePipelineRequest) (*thothnetworkv1.DeletePipelineResponse, error) {
	s.adapter.logger.Debug("DeletePipeline request received", "id", req.Id)

	// TODO: Implement actual pipeline deletion logic

	return nil, status.Error(codes.Unimplemented, "method DeletePipeline not implemented")
}

// ListPipelines lists pipelines
func (s *PipelineService) ListPipelines(ctx context.Context, req *thothnetworkv1.ListPipelinesRequest) (*thothnetworkv1.ListPipelinesResponse, error) {
	s.adapter.logger.Debug("ListPipelines request received")

	// TODO: Implement actual pipeline listing logic

	return nil, status.Error(codes.Unimplemented, "method ListPipelines not implemented")
}

// ProcessMessage processes a message through a pipeline
func (s *PipelineService) ProcessMessage(ctx context.Context, req *thothnetworkv1.ProcessMessageRequest) (*thothnetworkv1.ProcessMessageResponse, error) {
	s.adapter.logger.Debug("ProcessMessage request received", "pipelineID", req.PipelineId)

	// TODO: Implement actual message processing logic

	return nil, status.Error(codes.Unimplemented, "method ProcessMessage not implemented")
}

// StartPipeline starts a pipeline
func (s *PipelineService) StartPipeline(ctx context.Context, req *thothnetworkv1.StartPipelineRequest) (*thothnetworkv1.StartPipelineResponse, error) {
	s.adapter.logger.Debug("StartPipeline request received", "id", req.Id)

	// TODO: Implement actual pipeline starting logic

	return nil, status.Error(codes.Unimplemented, "method StartPipeline not implemented")
}

// StopPipeline stops a pipeline
func (s *PipelineService) StopPipeline(ctx context.Context, req *thothnetworkv1.StopPipelineRequest) (*thothnetworkv1.StopPipelineResponse, error) {
	s.adapter.logger.Debug("StopPipeline request received", "id", req.Id)

	// TODO: Implement actual pipeline stopping logic

	return nil, status.Error(codes.Unimplemented, "method StopPipeline not implemented")
}
